# big-boss-board

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1fa856b3969a_initial_schema.py  2b9d1c4e7a01_measurement_details_nullable_trend.py  3c1e8f5a2b14_kpi_area_info.py  4d2a7f9c6b30_activities_replace_agreement.py  5e3b8c1d9f42_organisation_kod.py  6f4a1b2c8d05_submission_inkorg.py  7a2b3c4d5e06_status_content.py  8b3c4d5e6f07_area_status.py  9c4d5e6f7a08_area_status_history.py  a0d5e6f7b109_area_status_dimension.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/auth/: __init__.py  claims.py  import_token.py  redirects.py  router.py  saml.py  sessions.py
backend/app/routers/: activities.py  admin.py  agreements.py  dialogues.py  import_data.py  kpi_areas.py  status_content.py  submissions.py
backend/app/seed_data/: organisationer.json
backend/app/services/: admin_data.py  ekonomi_import.py  gateway_token.py  hme_import.py  sjukfranvaro_import.py  status_content.py  submissions.py
backend/tests/: conftest.py  test_auth_api.py  test_claims.py  test_config.py  test_redirects.py  test_saml_config.py  test_sessions.py
docs/: ARCHITECTURE.md  BYGGPLAN.md  DEPLOY.md  EXTERNAL_DATABASE_PLAN.md  OPENSHIFT_PROD_PLAN.md  SAML_SSO_PLAN.md
frontend/: .dockerignore  .env-cicd  Dockerfile  entrypoint.sh  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
frontend/components/: BrandBar.tsx  BrandLockup.tsx  Dashboard.tsx  DetailPanel.tsx  DevBanner.tsx  Gauge.tsx  InfoPopover.tsx  QuestionPanel.tsx  SjukfranvaroNivaer.tsx  StatusFordelning.tsx  UserBadge.tsx  UserMenu.tsx  icons.tsx  status.ts
frontend/lib/: admin-api.ts  api.ts  auth.ts  (+1 more)
scripts/: build_hme_aggregate.py  import_ekonomi.py  import_ekonomi_serie.py  import_hme.py  import_sjukfranvaro.py  read_inbox.py
(+27 files in other folders)
